Fix overflowing nav and footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,6 @@
     --ui-white: white;
     --ui-pop: indianred;
     --shadow: 0px 1px 5px black;
-
     scroll-behavior: smooth;
 }
 
@@ -27,9 +26,10 @@ nav {
     left: 0;
     top: 0;
     height: 15px;
-    width: 100%;
+    width: calc(100% - 30px);
     padding: 15px;
-    text-align: center;
+    text-align: left;
+    overflow: hidden;
 }
 
 .navbutton {
@@ -76,7 +76,8 @@ section {
 
 footer {
     position: absolute;
-    width: 100%;
+    /* use calc to adjust for extra padding width */
+    width: calc(100% - 6px);
     bottom: 10;
     left: 0;
     background-color: var(--ui-accent);
